--- a/index.html
+++ b/index.html
@@ -22,10 +22,17 @@
 		</nav>
 
 		<article>
-			<h1>Hi, my name is Joonipurr Pip Kleinenheimer</h1>
+			<h1>The Adoption of Joonipurr Pip Kleinenheimer</h1>
 			<hr>
-			<p>site creator: me</p>
-			<p>site about: intro Joon</p>
+			<p>Good day fair website veiwer! My name is Nikki, I've been studying frontend web development since the
+				beginning of 2020. This fall semester I began studying at my local college and I'm excited to be
+				practicing my skills andd working towards a future in programming. At this moment, I am developing a
+				youth service nonprofit called
+				<a href="https://www.anaheimyoutopia.com/" target="_blank">Anaheim Youtopia</a> and it's been a great
+				learning experience and a great way to remain in alignment with my passion to support the youth of my
+				city. I am also a proud cat mom, I adopted Joonior in October of 2020 when she was just 6 weeks old!
+			</p>
+			<p></p>
 			<div class="home-img-container"><img src="" width="" height="" alt="" class="home-img"></div>
 		</article>
 
