--- a/index.html
+++ b/index.html
@@ -28,11 +28,25 @@
 				beginning of 2020. This fall semester I began studying at my local college and I'm excited to be
 				practicing my skills andd working towards a future in programming. At this moment, I am developing a
 				youth service nonprofit called
-				<a href="https://www.anaheimyoutopia.com/" target="_blank">Anaheim Youtopia</a> and it's been a great
-				learning experience and a great way to remain in alignment with my passion to support the youth of my
-				city. I am also a proud cat mom, I adopted Joonior in October of 2020 when she was just 6 weeks old!
+				<a href="https://www.anaheimyoutopia.com/" target="_blank">Anaheim Youtopia</a> and it's been quite the
+				learning experience as well as a great way to remain in alignment with my passion to support the youth
+				of my
+				city. I'm also a proud cat mom! I adopted Joonior in October of 2020 when she was just 6 weeks old!
 			</p>
-			<p></p>
+			<p>This site isn't about me though, it's about Joon. Joon asked me to develop this site so she can share all
+				the great times and adventures she's been having since her adoption. In the first six weeks of her life
+				she was born, obviously, then removed from the care of her mother because she couldn't provide a healthy
+				upbringing. Some giant scooped her and her siblings up, put them in a car, and drove them to a big
+				facility where there are all sorts of other animals. Once there, Joon was examined then placed in a cage
+				with her siblings. The cage was in a room with a lot of other cats. People would come and see her but
+				never took her. When I met her, she was scared and not interested in giants. She wanted to be back in
+				the cage with her brother where she felt safe. I gave her some time to adjust and started to notice
+				little blips of her bold personality shine through. The moment I knew this was my new baby was when I
+				scritchy scratched her little baby butt and she loved it. I knew then that she had a great personality
+				and we'd get along just fine once she was in a healthy trusting environment. Before she could come home
+				with me, she had to get a hysterectomy. I'm sure this was a traumatic experience for her, but it was
+				comforting to me. I used to be the only youngin' I knew who had a hysterctomy, but I was no longer alone
+				and neither was she.</p>
 			<div class="home-img-container"><img src="" width="" height="" alt="" class="home-img"></div>
 		</article>
 
