--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</nav>
 
 		<article>
-			<h1>The Adoption of Joonipurr Pip Kleinenheimer</h1>
+			<h1>Joon</h1>
 			<hr>
 			<p>Good day fair website veiwer! My name is Nikki, I've been studying frontend web development since the
 				beginning of 2020. This fall semester I began studying at my local college and I'm excited to be
