--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 	<div id="wrapper">
 
 		<nav>
-			<button><a href="index.html">Home</a></button>
-			<button><a href="a4.html">Childhood</a></button>
-			<button><a href="a5.html">Favorite Toys</a></button>
-			<button><a href="a6.html">Sleeping Positions</a></button>
-			<button><a href="a7.html">Adopt or Foster Today!</a></button>
+			<a href="index.html">Home</a>
+			<a href="a4.html">Childhood</a>
+			<a href="a5.html">Favorite Toys</a>
+			<a href="a6.html">Sleeping Positions</a>
+			<a href="a7.html">Adopt or Foster Today!</a>
 		</nav>
 
 		<article>
