--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div id="wrapper">
 
 		<nav>
-			<a href="index.html">Home</a>
+			<a href="index.html" class="active">Home</a>
 			<a href="a4.html">Childhood</a>
 			<a href="a5.html">Favorite Toys</a>
 			<a href="a6.html">Sleeping Positions</a>
