changed width and height

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				with me, she had to get a hysterectomy. I'm sure this was a traumatic experience for her, but it was
 				comforting to me. I used to be the only youngin' I knew who had a hysterctomy, but I was no longer alone
 				and neither was she.</p>
-			<div class="home-img-container"><img src="images/home-img.jpeg" width="30%" height="30%" alt="Joon at six weeks old peeking out from under a shelf on top of a stack of vinyl records." class="home-img"></div>
+			<div class="home-img-container"><img src="images/home-img.jpeg" width="300" height="400" alt="Joon at six weeks old peeking out from under a shelf on top of a stack of vinyl records." class="home-img"></div>
 			<br>
 			<p>Joon during her first week in her new home.</p>
 		</article>
