create a4.html file
1. changed page title
2. added active class to correct nav li
3. Updated page h1

--- a/a4.html
+++ b/a4.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-	<title>Meet Joonipurr 😻</title>
+	<title>My Favorite Toys</title>
 
 	<meta charset="utf-8">
 
@@ -14,15 +14,15 @@
 	<div id="wrapper">
 
 		<nav>
-			<a href="index.html" class="active">Home</a>
-			<a href="a4.html">Favorite Toys</a>
+			<a href="index.html">Home</a>
+			<a href="a4.html" class="active">Favorite Toys</a>
 			<a href="a5.html">Childhood</a>
 			<a href="a6.html">Sleeping Positions</a>
 			<a href="a7.html">Adopt or Foster Today!</a>
 		</nav>
 
 		<article>
-			<h1>Joon</h1>
+			<h1>My Favorite Toys</h1>
 			<hr>
 			<p>Good day fair website veiwer! My name is Nikki, I've been studying frontend web development since the
 				beginning of 2020. This fall semester I began studying at my local college! I'm excited to be
