page layout skeleton
1. create three p tags
2. add img tags in p
3. add classes to p and img

--- a/a4.html
+++ b/a4.html
@@ -24,31 +24,10 @@
 		<article>
 			<h1>My Favorite Toys</h1>
 			<hr>
-			<p>Good day fair website veiwer! My name is Nikki, I've been studying frontend web development since the
-				beginning of 2020. This fall semester I began studying at my local college! I'm excited to be
-				practicing my skills and working towards a future in programming. In addition, I'm developing a
-				youth service nonprofit called
-				<a href="https://www.anaheimyoutopia.com/" target="_blank">Anaheim Youtopia</a>! It's been quite the
-				learning experience as well as a great way to remain in alignment with my passion to support the youth
-				of my
-				city. I'm also a proud cat mom! I adopted Joonipurr in October of 2020 when she was just 6 weeks old!
-			</p>
-			<p>This site isn't about me though, it's about Joon. Joon asked me to develop this site so she can share all
-				the great times and adventures she's been having since her adoption. Things weren't going great for her before we found each other. In the first six weeks of her life
-				she was removed from the care of her mother because she couldn't provide a healthy
-				upbringing. A giant scooped her and her siblings up, put them in a car, and drove them to a big
-				facility where there are all sorts of other animals. Once there, Joon was examined then placed in a cage
-				with her siblings. The cage was in a room with a lot of other cats. Giants would walk by occasionally, sometimes they even brought food and water. When I met her, she was scared and not interested in giants. She wanted to be back in
-				the cage with her brother where she felt safe. I gave her some time to adjust and started to notice
-				little blips of her bold personality shine through. The moment I knew this was my new baby was when I
-				scritchy scratched her little baby butt and she loved it. I knew then that she had a great personality
-				and we'd get along just fine once she was in a healthy trusting environment. Before she could come home
-				with me, she had to get a hysterectomy. I'm sure this was a traumatic experience for her, but it was
-				comforting to me. I used to be the only youngin' I knew who had a hysterctomy, but I was no longer alone
-				and neither was she.</p>
-			<div class="home-img-container"><img src="images/home-img.jpeg" width="300" height="400" alt="Joon at six weeks old peeking out from under a shelf on top of a stack of vinyl records." class="home-img"></div>
-			<br>
-			<p>Joon during her first week in her new home.</p>
+			<p class="bold"><img src="" width="" height="" alt="" class="left"></p>
+			<p class="italic"><img src="" width="" height=""  alt="" class="right"></p>
+			<p class="spacing"><img src="" width="" height=""  alt="" class="left"></p>
+
 		</article>
 
 
