add text and values
1. add text to p's
2. add values to width and height of img
3. add images
4. add hrefs to images and before the closing p tags

--- a/a4.html
+++ b/a4.html
@@ -24,9 +24,11 @@
 		<article>
 			<h1>My Favorite Toys</h1>
 			<hr>
-			<p class="bold"><img src="" width="" height="" alt="" class="left"></p>
-			<p class="italic"><img src="" width="" height=""  alt="" class="right"></p>
-			<p class="spacing"><img src="" width="" height=""  alt="" class="left"></p>
+			<p class="bold"><a href=""><img src="images/trash-img1.jpeg" width="200px" height="300px" alt="Joon playing in an empty Amazon box" class="left"></a>Trash: I friggin love trash. My mom is always giving me something new to play with and I haven't loved anything else as much as I love trash. Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, hic. Quas tempore blanditiis beatae, molestiae ex alias in optio, aliquid quasi nihil ab tenetur, dolorum a unde amet! Accusantium, aliquam?<a href="">Click Here!</a></p>
+			<hr>
+			<p class="italic"><a href=""><img src="images/trash-img2.jpeg" width="200px" height="300px"  alt="Joon resting in a large plastic bag" class="right"></a>More trash: You thought I was kidding? I'm telling you, if you haven't tried trash yet, GET ON THIS TRAIN! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam possimus, voluptates magnam incidunt explicabo, excepturi error esse ea doloremque dolores debitis architecto in corporis quis sunt velit necessitatibus omnis alias!<a href="">Click Here!</a></p>
+			<hr>
+			<a class="spacing"><a href=""><img src="images/trash-img3.jpeg" width="200px" height="300px"  alt="Joon resting after playing with sheets of tissue paper" class="left"></a>Lastly, trash: 😸 in case you were still questioning whether or not trash is the greatest, I wanted to provide one last argument in favor of trash as greatest toy ever. Trash, if you're listening... I love you 😿! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore tenetur asperiores nisi officia maiores veritatis harum nulla, quam maxime quod laboriosam ea! Placeat quidem veniam, aspernatur voluptates expedita tempora illum.<a href="">Click Here!</a></p>
 
 		</article>
 
