--- a/a5.html
+++ b/a5.html
@@ -24,6 +24,8 @@
         <article>
             <h1>My Childhood</h1>
             <hr>
+            <h2>Top Five Favorite Memories</h2>
+            <h2>Places I've been</h2>
         </article>
 
 
