--- a/a5.html
+++ b/a5.html
@@ -24,8 +24,25 @@
         <article>
             <h1>My Childhood</h1>
             <hr>
-            <h2>Top Five Favorite Memories</h2>
             <h2>Places I've been</h2>
+            <ul>
+                <li><a href="https://www.ocpetinfo.com/">OC Animal Care</a>: This is where my mom found me.</li>
+                <li><a href="https://anaheim.net/">Anaheim, CA</a>: My forever home.</li>
+                <li><a href="https://www.flylax.com/">LAX</a>: We took a flight cross country!</li>
+                <li><a href="https://talgov.com/Main/Home.aspx">Tallahassee, FL</a>: I lived in Tally for a few months.</li>
+                <li><a href="https://www.visitlakecharles.org/">Lake Charles, LA</a>: On our roadtrip home to Anaheim, we stopped here.</li>
+                <li><a href="http://www.houstontx.gov/">Houston, TX</a>: Then said hi to some friends here.</li>
+                <li><a href="http://www.ozona.com/">Ozona, TX</a>: We were at our friends a little late, so we mobbed it here in the dark. I hate driving in the dark.</li>
+                <li><a href="https://www.cityofbenson.com/">Benson, AZ</a>: Finally, our last stop before home.</li>
+            </ul>
+            <h2>Top Five Memories</h2>
+            <ol>
+                <li>Coming home</li>
+                <li>Falling off the cat walk</li>
+                <li>Meeting the dogs</li>
+                <li>My flights across country</li>
+                <li>The enclosed porch in Florida</li>
+            </ol>
         </article>
 
 
@@ -34,6 +51,7 @@
         </div>
 
     </div>
+    <!--Link to FontAwesome.com icon library-->
 </body>
 
 </html>
