--- a/a5.html
+++ b/a5.html
@@ -44,6 +44,7 @@
                 <li>My flights across country</li>
                 <li>The enclosed porch in Florida</li>
             </ol>
+            <p>Have a question or comment? <a href="mailto:joon@imacat.com" id="email">Email me.</a></p>
         </article>
 
 
