--- a/a6.html
+++ b/a6.html
@@ -22,7 +22,7 @@
         </nav>
 
         <article>
-            <h1>Adopt or Foster Today!</h1>
+            <h1>Ask Us How To Adopt or Foster Today!</h1>
             <hr>
             
            
