--- a/a6.html
+++ b/a6.html
@@ -24,7 +24,23 @@
         <article>
             <h1>Ask Us How To Adopt or Foster Today!</h1>
             <hr>
-            
+            <form action="">
+                <fieldset>
+                    <legend>Contact Information</legend>
+
+                    <label for="firstName">First Name:</label>
+                    <input type="text" name="firstName" id="firstName" autofocus>
+
+                    <label for="lastName">Last Name:</label>
+                    <input type="text" name="lastName" id="lastName">
+
+                    <label for="email">Email Address:</label>
+                    <input type="email" name="email" id="email">
+
+                    <label for="phone">Phone Number:</label>
+                    <input type="text" name="phone" id="phone" placeholder="333-444-5555">
+                </fieldset>
+            </form>
            
         </article>
 
