--- a/a6.html
+++ b/a6.html
@@ -40,6 +40,24 @@
                     <label for="phone">Phone Number:</label>
                     <input type="text" name="phone" id="phone" placeholder="333-444-5555">
                 </fieldset>
+                <fieldset>
+                    <legend>What is your hair length preference?</legend>
+
+                    <input type="checkbox" name="" id="">
+                    <label for=""></label>
+
+                    <input type="checkbox" name="" id="">
+                    <label for=""></label>
+
+                    <input type="checkbox" name="" id="">
+                    <label for=""></label>
+
+                    <input type="checkbox" name="" id="">
+                    <label for=""></label>
+
+                    <input type="checkbox" name="" id="">
+                    <label for=""></label>
+                </fieldset>
             </form>
            
         </article>
