--- a/a6.html
+++ b/a6.html
@@ -44,19 +44,19 @@
                     <legend>What is your hair length preference?</legend>
 
                     <input type="checkbox" name="" id="">
-                    <label for=""></label>
+                    <label for="long">Long fur</label>
 
                     <input type="checkbox" name="" id="">
-                    <label for=""></label>
+                    <label for="medium">Medium fur</label>
 
                     <input type="checkbox" name="" id="">
-                    <label for=""></label>
+                    <label for="short">Short fur</label>
 
                     <input type="checkbox" name="" id="">
-                    <label for=""></label>
+                    <label for="furless">No fur</label>
 
                     <input type="checkbox" name="" id="">
-                    <label for=""></label>
+                    <label for="hypoallergenic">Hypoallergenic</label>
                 </fieldset>
             </form>
            
