checkboxes value attribute

--- a/a6.html
+++ b/a6.html
@@ -43,19 +43,19 @@
                 <fieldset>
                     <legend>What is your hair length preference?</legend>
 
-                    <input type="checkbox" name="fur" id="long">
+                    <input type="checkbox" name="fur" id="long" value="long">
                     <label for="long">Long fur</label>
 
-                    <input type="checkbox" name="fur" id="medium">
+                    <input type="checkbox" name="fur" id="medium" value="medium">
                     <label for="medium">Medium fur</label>
 
-                    <input type="checkbox" name="fur" id="short">
+                    <input type="checkbox" name="fur" id="short" value="short">
                     <label for="short">Short fur</label>
 
-                    <input type="checkbox" name="fur" id="furless">
+                    <input type="checkbox" name="fur" id="furless" value="furless">
                     <label for="furless">No fur</label>
 
-                    <input type="checkbox" name="fur" id="hypoallergenic">
+                    <input type="checkbox" name="fur" id="hypoallergenic" value="hypoallergenic">
                     <label for="hypoallergenic">Hypoallergenic</label>
                 </fieldset>
             </form>
