third fieldset and legend

--- a/a6.html
+++ b/a6.html
@@ -58,6 +58,10 @@
                     <input type="checkbox" name="fur" id="hypoallergenic" value="hypoallergenic">
                     <label for="hypoallergenic">Hypoallergenic</label>
                 </fieldset>
+                <fieldset>
+                    <legend>Other Information</legend>
+                    
+                </fieldset>
             </form>
            
         </article>
