select menu options

--- a/a6.html
+++ b/a6.html
@@ -60,7 +60,16 @@
                 </fieldset>
                 <fieldset>
                     <legend>Other Information</legend>
-                    
+
+                    <label for="breeds">What is your favorite breed?</label>
+                    <select name="breeds" id="breeds">
+                        <option value="tortie">Tortie</option>
+                        <option value="tabby">Tabby</option>
+                        <option value="maineCoon">Maine Coon</option>
+                        <option value="persian">Persian</option>
+                        <option value="scottish">Scottish Fold</option>
+                    </select>
+
                 </fieldset>
             </form>
            
