--- a/a6.html
+++ b/a6.html
@@ -70,7 +70,25 @@
                         <option value="scottish">Scottish Fold</option>
                     </select>
 
+                    <label for="experience">How experienced are you with cats?</label>
+
+                    <input type="radio" name="experience" id="experience" value="beginner">
+                    <label for="beginner">Beginner</label>
+
+                    <input type="radio" name="experience" id="experience" value="intermediate">
+                    <label for="intermediate">Intermediate</label>
+
+                    <input type="radio" name="experience" id="experience" value="advanced">
+                    <label for="advanced">Advanced</label>
+
+                    <input type="radio" name="experience" id="experience" value="expert">
+                    <label for="expert">Expert</label>
+
+                    <label for="comments">Comments/Questions:</label>
+                    <textarea name="" id="comments" cols="30" rows="10"></textarea>
                 </fieldset>
+                <input type="submit" value="Submit">
+                <input type="reset" value="Clear">
             </form>
            
         </article>
