put form in div

--- a/a6.html
+++ b/a6.html
@@ -24,73 +24,74 @@
         <article>
             <h1>Ask Us How To Adopt or Foster Today!</h1>
             <hr>
-            <form action="">
-                <fieldset>
-                    <legend>Contact Information</legend>
+            <div>
+                <form action="">
+                    <fieldset>
+                        <legend>Contact Information</legend>
 
-                    <label for="firstName">First Name:</label>
-                    <input type="text" name="firstName" id="firstName" autofocus>
+                        <label for="firstName">First Name:</label>
+                        <input type="text" name="firstName" id="firstName" autofocus>
 
-                    <label for="lastName">Last Name:</label>
-                    <input type="text" name="lastName" id="lastName">
+                        <label for="lastName">Last Name:</label>
+                        <input type="text" name="lastName" id="lastName">
 
-                    <label for="email">Email Address:</label>
-                    <input type="email" name="email" id="email">
+                        <label for="email">Email Address:</label>
+                        <input type="email" name="email" id="email">
 
-                    <label for="phone">Phone Number:</label>
-                    <input type="text" name="phone" id="phone" placeholder="333-444-5555">
-                </fieldset>
-                <fieldset>
-                    <legend>What is your hair length preference?</legend>
+                        <label for="phone">Phone Number:</label>
+                        <input type="text" name="phone" id="phone" placeholder="333-444-5555">
+                    </fieldset>
+                    <fieldset>
+                        <legend>What is your hair length preference?</legend>
 
-                    <input type="checkbox" name="fur" id="long" value="long">
-                    <label for="long">Long fur</label>
+                        <input type="checkbox" name="fur" id="long" value="long">
+                        <label for="long">Long fur</label>
 
-                    <input type="checkbox" name="fur" id="medium" value="medium">
-                    <label for="medium">Medium fur</label>
+                        <input type="checkbox" name="fur" id="medium" value="medium">
+                        <label for="medium">Medium fur</label>
 
-                    <input type="checkbox" name="fur" id="short" value="short">
-                    <label for="short">Short fur</label>
+                        <input type="checkbox" name="fur" id="short" value="short">
+                        <label for="short">Short fur</label>
 
-                    <input type="checkbox" name="fur" id="furless" value="furless">
-                    <label for="furless">No fur</label>
+                        <input type="checkbox" name="fur" id="furless" value="furless">
+                        <label for="furless">No fur</label>
 
-                    <input type="checkbox" name="fur" id="hypoallergenic" value="hypoallergenic">
-                    <label for="hypoallergenic">Hypoallergenic</label>
-                </fieldset>
-                <fieldset>
-                    <legend>Other Information</legend>
+                        <input type="checkbox" name="fur" id="hypoallergenic" value="hypoallergenic">
+                        <label for="hypoallergenic">Hypoallergenic</label>
+                    </fieldset>
+                    <fieldset>
+                        <legend>Other Information</legend>
 
-                    <label for="breeds">What is your favorite breed?</label>
-                    <select name="breeds" id="breeds">
-                        <option value="tortie">Tortie</option>
-                        <option value="tabby">Tabby</option>
-                        <option value="maineCoon">Maine Coon</option>
-                        <option value="persian">Persian</option>
-                        <option value="scottish">Scottish Fold</option>
-                    </select>
+                        <label for="breeds">What is your favorite breed?</label>
+                        <select name="breeds" id="breeds">
+                            <option value="tortie">Tortie</option>
+                            <option value="tabby">Tabby</option>
+                            <option value="maineCoon">Maine Coon</option>
+                            <option value="persian">Persian</option>
+                            <option value="scottish">Scottish Fold</option>
+                        </select>
 
-                    <label for="experience">How experienced are you with cats?</label>
+                        <label for="experience">How experienced are you with cats?</label>
 
-                    <input type="radio" name="experience" id="experience" value="beginner">
-                    <label for="beginner">Beginner</label>
+                        <input type="radio" name="experience" id="experience" value="beginner">
+                        <label for="beginner">Beginner</label>
 
-                    <input type="radio" name="experience" id="experience" value="intermediate">
-                    <label for="intermediate">Intermediate</label>
+                        <input type="radio" name="experience" id="experience" value="intermediate">
+                        <label for="intermediate">Intermediate</label>
 
-                    <input type="radio" name="experience" id="experience" value="advanced">
-                    <label for="advanced">Advanced</label>
+                        <input type="radio" name="experience" id="experience" value="advanced">
+                        <label for="advanced">Advanced</label>
 
-                    <input type="radio" name="experience" id="experience" value="expert">
-                    <label for="expert">Expert</label>
+                        <input type="radio" name="experience" id="experience" value="expert">
+                        <label for="expert">Expert</label>
 
-                    <label for="comments">Comments/Questions:</label>
-                    <textarea name="" id="comments" cols="30" rows="10"></textarea>
-                </fieldset>
-                <input type="submit" value="Submit">
-                <input type="reset" value="Clear">
-            </form>
-           
+                        <label for="comments">Comments/Questions:</label>
+                        <textarea name="" id="comments" cols="30" rows="10"></textarea>
+                    </fieldset>
+                    <input type="submit" value="Submit">
+                    <input type="reset" value="Clear">
+                </form>
+            </div>
         </article>
 
 
