--- a/a6.html
+++ b/a6.html
@@ -25,7 +25,7 @@
             <h1>Ask Us How To Adopt or Foster Today!</h1>
             <hr>
             <div>
-                <form action="">
+                <form>
                     <fieldset>
                         <legend>Contact Information</legend>
 
