add inline style to div around form and fieldset ids

--- a/a6.html
+++ b/a6.html
@@ -24,9 +24,9 @@
         <article>
             <h1>Ask Us How To Adopt or Foster Today!</h1>
             <hr>
-            <div>
+            <div style="display: flex; justify-content: center;">
                 <form>
-                    <fieldset>
+                    <fieldset id="fieldsetOne">
                         <legend>Contact Information</legend>
 
                         <label for="firstName">First Name:</label>
@@ -41,7 +41,7 @@
                         <label for="phone">Phone Number:</label>
                         <input type="text" name="phone" id="phone" placeholder="333-444-5555">
                     </fieldset>
-                    <fieldset>
+                    <fieldset id="fieldsetTwo">
                         <legend>What is your hair length preference?</legend>
 
                         <input type="checkbox" name="fur" id="long" value="long">
@@ -59,7 +59,7 @@
                         <input type="checkbox" name="fur" id="hypoallergenic" value="hypoallergenic">
                         <label for="hypoallergenic">Hypoallergenic</label>
                     </fieldset>
-                    <fieldset>
+                    <fieldset id="fieldsetThree">
                         <legend>Other Information</legend>
 
                         <label for="breeds">What is your favorite breed?</label>
