--- a/a6.html
+++ b/a6.html
@@ -42,7 +42,7 @@
                         <input type="text" name="phone" id="phone" placeholder="333-444-5555">
                     </fieldset>
                     <fieldset id="fieldsetTwo">
-                        <legend>What is your hair length preference?</legend>
+                        <legend>What is your fur length preference?</legend>
 
                         <input type="checkbox" name="fur" id="long" value="long">
                         <label for="long">Long fur</label>
@@ -63,6 +63,7 @@
                         <legend>Other Information</legend>
 
                         <label for="breeds">What is your favorite breed?</label>
+                        <br>
                         <select name="breeds" id="breeds">
                             <option value="tortie">Tortie</option>
                             <option value="tabby">Tabby</option>
@@ -70,6 +71,7 @@
                             <option value="persian">Persian</option>
                             <option value="scottish">Scottish Fold</option>
                         </select>
+                        <br>
                         <br>
                         <label for="experience">How experienced are you with cats?</label>
                         <br>
@@ -84,6 +86,7 @@
                         <br>
                         <input type="radio" name="experience" id="experience" value="expert">
                         <label for="expert">Expert</label>
+                        <br>
                         <br>
                         <label for="comments">Comments/Questions:</label>
                         <br>
