--- a/a6.html
+++ b/a6.html
@@ -18,7 +18,7 @@
             <a href="a4.html">Favorite Toys</a>
             <a href="a5.html">Childhood</a>
             <a href="a6.html" class="active">Adopt or Foster Today!</a>
-            <a href="a7.html">Sleeping Positions</a>
+            <a href="a7.html">Resources</a>
         </nav>
 
         <article>
