--- a/a5.html
+++ b/a5.html
@@ -18,7 +18,7 @@
             <a href="a4.html">Favorite Toys</a>
             <a href="a5.html" class="active">Childhood</a>
             <a href="a6.html">Adopt or Foster Today!</a>
-            <a href="a7.html">Sleeping Positions</a>
+            <a href="a7.html">Resources</a>
         </nav>
 
         <article>
